force-app/main/default/objects/AP_StepApproverSet__c/AP_StepApproverSet__c.object-meta.xml
<CustomObject>
    <label>AP_StepApproverSet(Deprecated)</label>
    <nameField>
        <label>StepApproverSet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP_StepApproverSets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>