force-app/main/default/objects/AP_StepApproverSet__c/fields/AP_StepDefinition__c.field-meta.xml
<CustomField>
    <fullName>AP_StepDefinition__c</fullName>
    <label>AP_StepDefinition</label>
    <referenceTo>ApprovalProcessStepDefinition__c</referenceTo>
    <relationshipName>AP_StepDefinitions</relationshipName>
    <type>Lookup</type>
</CustomField>