force-app/main/default/objects/AP_StepApproverSet__c/fields/ApproverSetType__c.field-meta.xml
<CustomField>
    <fullName>ApproverSetType__c</fullName>
    <label>ApproverSetType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>adhoc</fullName>
                <label>Let the submitter choose the approver manually</label>
            </value>
            <value>
                <fullName>queue</fullName>
                <label>Automatically assign to queue</label>
            </value>
            <value>
                <fullName>hierarchy</fullName>
                <label>Automatically assign using the user field selected earlier</label>
            </value>
            <value>
                <fullName>list</fullName>
                <label>Build approver list</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>