force-app/main/default/objects/AP_StepApproverSet__c/fields/WhenMultipleApprovers__c.field-meta.xml
<CustomField>
    <fullName>WhenMultipleApprovers__c</fullName>
    <label>WhenMultipleApprovers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unanimous</fullName>
            </value>
            <value>
                <fullName>FirstResponse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>